--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
             <p>Procurar Usuário</p>
             <input type="search" name="search_user" id="search_user"></label>
         <label for="register_user">
-            <input type="button" id="register_user" value="Cadastrar usuário">
+            <a href="register.html"><input type="button" id="register_user" value="Cadastrar usuário"></a>
         </label>
     </section>
     <script defer src="script.js"></script>
